odf.rust-systre.64b4b05985b9a62fe702cb5d45276e5b1b895dc9
Running as unit: run-p883055-i5076746.scope; invocation ID: 5fd3dd75e9ae4ca8b99f0b81630a3d3d
   Compiling autocfg v1.1.0
   Compiling memchr v2.5.0
    Checking either v1.8.1
    Checking minimal-lexical v0.2.1
    Checking lazy_static v1.4.0
    Checking itertools v0.10.5
   Compiling num-traits v0.2.15
   Compiling num-integer v0.1.45
   Compiling num-bigint v0.4.3
   Compiling num-rational v0.4.1
    Checking nom v7.1.3
    Checking rust-systre v0.1.0 (/tmp/nix-shell.AaBijX/odf_rust-systre_41kdv15k)
error[E0282]: type annotations needed
  --> src/spacegroups/basics.rs:80:21
   |
80 |             let t = (&to_primitive * op).mod_z();
   |                     ^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0275]: overflow evaluating the requirement `<&CoordinateMap<Ratio<BigInt>, CS, CSP> as Mul<...>>::Output == _`
  --> src/spacegroups/basics.rs:80:21
   |
80 |             let t = (&to_primitive * op).mod_z();
   |                     ^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rust_systre`)

warning: unreachable expression
   --> src/spacegroups/finder.rs:181:15
    |
181 |     (todo!(), to_normalized)
    |      -------  ^^^^^^^^^^^^^ unreachable expression
    |      |
    |      any code following this expression is unreachable
    |
    = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `centering`
   --> src/spacegroups/finder.rs:175:22
    |
175 |     let (normalized, centering) = normalized_basis_2d(crystal_system, &pcell);
    |                      ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_centering`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `to_normalized`
   --> src/spacegroups/finder.rs:178:9
    |
178 |     let to_normalized = (&normalized * &basis).transpose().inverse().unwrap()
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_to_normalized`

Some errors have detailed explanations: E0275, E0282.
For more information about an error, try `rustc --explain E0275`.
warning: `rust-systre` (lib) generated 3 warnings
error: could not compile `rust-systre` (lib) due to 2 previous errors; 3 warnings emitted
